[gd_scene load_steps=57 format=3 uid="uid://fk0ie8pjbpln"]

[ext_resource type="Script" path="res://main.gd" id="1_36q8j"]
[ext_resource type="PackedScene" uid="uid://jvmksi87ndvi" path="res://player.tscn" id="1_arn5h"]
[ext_resource type="Script" path="res://sub_viewport_container.gd" id="2_1rbuw"]
[ext_resource type="Script" path="res://camera_3d.gd" id="2_e55b0"]
[ext_resource type="Shader" path="res://glitch.gdshader" id="3_ktawk"]
[ext_resource type="Script" path="res://canvas_layer.gd" id="5_sf4l1"]
[ext_resource type="Script" path="res://p_console.gd" id="5_uhvg7"]
[ext_resource type="Script" path="res://settings.gd" id="7_4qtkp"]
[ext_resource type="Shader" path="res://freaky.gdshader" id="7_6cqs6"]
[ext_resource type="Texture2D" uid="uid://dk30ciya5qldy" path="res://sprites/catexp/Untitled-3.png" id="7_jkdwh"]
[ext_resource type="Shader" path="res://datamoshing.gdshader" id="7_y4vo8"]
[ext_resource type="Script" path="res://level_manager.gd" id="9_rlvy5"]
[ext_resource type="Shader" path="res://low_health.gdshader" id="9_vf5oh"]
[ext_resource type="Script" path="res://dash_sprite.gd" id="11_fa5td"]
[ext_resource type="AudioStream" uid="uid://sacfddgutjrt" path="res://sounds/Track1_kangerscreammp3.wav" id="12_p0ute"]
[ext_resource type="Texture2D" uid="uid://cb8d6ayiynkjv" path="res://sprites/attack_hands.png" id="13_j0ygm"]
[ext_resource type="AudioStream" uid="uid://c0wn62dke1gql" path="res://sounds/Track2_VoiceAudio.wav" id="13_ou8n6"]
[ext_resource type="AudioStream" uid="uid://dp116jp7otldi" path="res://sounds/Track3_VoiceAudio.wav" id="14_em0p2"]
[ext_resource type="Script" path="res://texture_rect.gd" id="17_ocwrj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rmvd8"]
size = Vector3(10, 1, 10)

[sub_resource type="BoxMesh" id="BoxMesh_xu3bg"]

[sub_resource type="ViewportTexture" id="ViewportTexture_5kxqv"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_t308c"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sv75o"]
resource_local_to_scene = true
shader = ExtResource("7_6cqs6")
shader_parameter/strength = 0.0
shader_parameter/triggered = true
shader_parameter/screen_texture = SubResource("ViewportTexture_t308c")
shader_parameter/motion_vectors = SubResource("ViewportTexture_5kxqv")

[sub_resource type="ViewportTexture" id="ViewportTexture_ih1cd"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_i001q"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k5hur"]
resource_local_to_scene = true
shader = ExtResource("7_y4vo8")
shader_parameter/strength = 0.0
shader_parameter/block_size = 1.0
shader_parameter/motion_vectors = SubResource("ViewportTexture_i001q")

[sub_resource type="ViewportTexture" id="ViewportTexture_nijhe"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xtxmy"]
resource_local_to_scene = true
shader = ExtResource("9_vf5oh")
shader_parameter/strength = 1.0
shader_parameter/triggered = true
shader_parameter/noise_intensity = 0.129
shader_parameter/heartbeat_speed = 3.8
shader_parameter/warp_intensity = 0.005
shader_parameter/dissolve_intensity = 0.5
shader_parameter/dissolve_threshold = 0.6
shader_parameter/motion_vectors = SubResource("ViewportTexture_nijhe")

[sub_resource type="Theme" id="Theme_jpke2"]
resource_local_to_scene = true
HBoxContainer/colors/body_color = Color(0, 0, 0, 1)
MarginContainer/colors/body_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ctc50"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_xda12"]
default_font_size = 13

[sub_resource type="FontVariation" id="FontVariation_futfl"]
variation_transform = Transform2D(1.095, 0, 0.02, 1.035, 0.085, 0)
spacing_glyph = 1
spacing_top = 6
baseline_offset = 0.435

[sub_resource type="AtlasTexture" id="AtlasTexture_v7tut"]
atlas = ExtResource("7_jkdwh")
region = Rect2(0, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yo4e"]
atlas = ExtResource("7_jkdwh")
region = Rect2(480, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxhu4"]
atlas = ExtResource("7_jkdwh")
region = Rect2(960, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7ga1"]
atlas = ExtResource("7_jkdwh")
region = Rect2(1440, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p0kb"]
atlas = ExtResource("7_jkdwh")
region = Rect2(1920, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u7hm"]
atlas = ExtResource("7_jkdwh")
region = Rect2(2400, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_7csue"]
atlas = ExtResource("7_jkdwh")
region = Rect2(2880, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm0wn"]
atlas = ExtResource("7_jkdwh")
region = Rect2(3360, 0, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_vknuu"]
atlas = ExtResource("7_jkdwh")
region = Rect2(0, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_4khqd"]
atlas = ExtResource("7_jkdwh")
region = Rect2(480, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0awv"]
atlas = ExtResource("7_jkdwh")
region = Rect2(960, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha0vx"]
atlas = ExtResource("7_jkdwh")
region = Rect2(1440, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra8s8"]
atlas = ExtResource("7_jkdwh")
region = Rect2(1920, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_w76qw"]
atlas = ExtResource("7_jkdwh")
region = Rect2(2400, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_dotvi"]
atlas = ExtResource("7_jkdwh")
region = Rect2(2880, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_485td"]
atlas = ExtResource("7_jkdwh")
region = Rect2(3360, 442, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvh4r"]
atlas = ExtResource("7_jkdwh")
region = Rect2(0, 884, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxe87"]
atlas = ExtResource("7_jkdwh")
region = Rect2(480, 884, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffqs2"]
atlas = ExtResource("7_jkdwh")
region = Rect2(960, 884, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkujo"]
atlas = ExtResource("7_jkdwh")
region = Rect2(1440, 884, 480, 442)

[sub_resource type="AtlasTexture" id="AtlasTexture_caov4"]
atlas = ExtResource("7_jkdwh")
region = Rect2(1920, 884, 480, 442)

[sub_resource type="SpriteFrames" id="SpriteFrames_6s88e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7tut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yo4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxhu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7ga1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p0kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u7hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7csue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm0wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vknuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4khqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0awv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha0vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra8s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w76qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dotvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_485td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvh4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxe87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffqs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkujo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caov4")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hbw6"]
shader = ExtResource("3_ktawk")
shader_parameter/datamosh_amount = 0.5
shader_parameter/noise_strength = 0.5
shader_parameter/glitch_button = 0

[node name="Main" type="Node"]
process_mode = 1
script = ExtResource("1_36q8j")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
process_mode = 3
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
stretch = true
stretch_shrink = 3
script = ExtResource("2_1rbuw")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
process_mode = 3
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(426, 266)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="OmniLight3D" type="OmniLight3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.76837e-07, 2.91825, -0.303359)

[node name="CharacterBody3D" parent="SubViewportContainer/SubViewport/Node3D" instance=ExtResource("1_arn5h")]
process_mode = 1

[node name="Marker3D" type="Marker3D" parent="SubViewportContainer/SubViewport/Node3D/CharacterBody3D"]

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/Node3D/CharacterBody3D/Marker3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.42205, 0.284705)
script = ExtResource("2_e55b0")

[node name="floor" type="StaticBody3D" parent="SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/Node3D/floor"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.48403, 0)
shape = SubResource("BoxShape3D_rmvd8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/Node3D/floor"]
mesh = SubResource("BoxMesh_xu3bg")

[node name="PlayerSpawn" type="Marker3D" parent="SubViewportContainer/SubViewport/Node3D/floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.59684, 0)

[node name="LevelHolder" type="Node3D" parent="SubViewportContainer/SubViewport/Node3D"]
process_mode = 1

[node name="Freaky" type="TextureRect" parent="SubViewportContainer/SubViewport"]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_sv75o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("ViewportTexture_ih1cd")
script = ExtResource("17_ocwrj")

[node name="Datamoshing" type="ColorRect" parent="SubViewportContainer/SubViewport/Freaky"]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_k5hur")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Freaky2" type="TextureRect" parent="SubViewportContainer/SubViewport"]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_sv75o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("ViewportTexture_ih1cd")

[node name="LowHealth" type="ColorRect" parent="SubViewportContainer/SubViewport"]
visible = false
material = SubResource("ShaderMaterial_xtxmy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.934658, -0.235653, -0.266236, -1.54024e-09, -0.748805, 0.66279, -0.355547, -0.619482, -0.699877, 0.614161, 8.31196, -8.11746)
shadow_enabled = true

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
offset_left = 66.0
offset_top = 36.0
offset_right = 766.0
offset_bottom = 636.0
theme = SubResource("Theme_jpke2")
script = ExtResource("5_uhvg7")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ctc50")

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.79
anchor_right = 0.021
anchor_bottom = 0.79
offset_left = -4.11267
offset_top = -375.59
offset_right = 746.887
offset_bottom = 3.41037
bbcode_enabled = true
scroll_active = false
scroll_following = true

[node name="TextEdit" type="TextEdit" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.066
anchor_top = 0.878
anchor_right = 0.066
anchor_bottom = 0.878
offset_left = -0.0639954
offset_top = -11.242
offset_right = 688.936
offset_bottom = 31.758
theme = SubResource("Theme_xda12")
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(2.5028e-06, 0, 0.695364, 1)
theme_override_constants/caret_width = 6
theme_override_fonts/font = SubResource("FontVariation_futfl")
caret_blink = true
caret_draw_when_editable_disabled = true

[node name="SettingsManager" type="Node" parent="."]
process_mode = 3
process_priority = 1
script = ExtResource("7_4qtkp")

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 91.0
offset_top = 55.0
offset_right = 705.0
offset_bottom = 410.0

[node name="cat" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(948, 448.5)
scale = Vector2(3.96667, 2.12018)
sprite_frames = SubResource("SpriteFrames_6s88e")

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("9_rlvy5")

[node name="DashSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(638, 673)
scale = Vector2(3.03062, 2.7875)
texture = ExtResource("13_j0ygm")
script = ExtResource("11_fa5td")

[node name="health" type="HSlider" parent="."]
offset_left = 422.0
offset_top = 762.0
offset_right = 895.0
offset_bottom = 778.0
editable = false

[node name="Hurt0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_p0ute")

[node name="Hurt1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ou8n6")

[node name="Hurt2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_em0p2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true
script = ExtResource("5_sf4l1")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource("ShaderMaterial_1hbw6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
